[gd_scene load_steps=7 format=3 uid="uid://63cabh43gubp"]

[ext_resource type="Script" path="res://scenes/counting_tile.gd" id="1_hjgrb"]
[ext_resource type="StyleBox" uid="uid://o4x6us42ieyr" path="res://scenes/couting_tile.tres" id="2_oudya"]
[ext_resource type="Texture2D" uid="uid://cq7w4ibjgfehh" path="res://assets/circle_05.png" id="3_o441s"]
[ext_resource type="Texture2D" uid="uid://dikr74jjcnim5" path="res://assets/star_06.png" id="4_g1et8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5l5r7"]
radius = 17.1172

[sub_resource type="CircleShape2D" id="CircleShape2D_d25kg"]
radius = 54.0

[node name="counting_tile" type="StaticBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_hjgrb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5l5r7")
disabled = true

[node name="picking_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="picking_area"]
shape = SubResource("CircleShape2D_d25kg")
debug_color = Color(0, 0.644928, 0.270931, 0.42)

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(52, 52)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_oudya")

[node name="counting_value" type="Label" parent="PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 30
text = "48"
horizontal_alignment = 1

[node name="PointLight2D" type="PointLight2D" parent="."]
enabled = false
color = Color(1, 0.329412, 1, 1)
energy = 2.0
blend_mode = 2
shadow_enabled = true
texture = ExtResource("3_o441s")

[node name="blinking_light" type="PointLight2D" parent="."]
enabled = false
energy = 1.5
texture = ExtResource("4_g1et8")

[node name="celebrate" type="CPUParticles2D" parent="."]
emitting = false
amount = 60
one_shot = true
explosiveness = 0.6
lifetime_randomness = 1.0
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
scale_amount_min = 5.0
scale_amount_max = 15.0
color = Color(0, 1, 0, 1)

[node name="sad" type="CPUParticles2D" parent="."]
emitting = false
amount = 60
one_shot = true
explosiveness = 0.6
lifetime_randomness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 500)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color = Color(1, 0, 0, 1)

[node name="blink_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="start_blinking" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="picking_area" to="." method="_on_picking_area_body_entered"]
[connection signal="body_exited" from="picking_area" to="." method="_on_picking_area_body_exited"]
[connection signal="finished" from="celebrate" to="." method="particles_finished"]
[connection signal="finished" from="sad" to="." method="particles_finished"]
[connection signal="timeout" from="blink_timer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="start_blinking" to="." method="_on_start_blinking_timeout"]
